--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="scripts/jquery.1.11.3.js"></script>
     <script type="text/javascript" src="//connect.facebook.net/en_US/sdk.js"></script>
     <script src="scripts/index.js"></script>
 
